chore: added product variant widget
